# MSDT

./: .gitignore  1.py  2.py  3.py  4.py  5.py  7.py  92.csv  checksum.py  code.py  g  lab1.py  lab4.py  lab5.py  lr3.py  lr4.py  main.py  old_code.py  r.txt  result-check.yml  result.json  tennis.py  tennis_unittest.py  test_pytest_file.py  test_yahtzee.py  tictactoe.py  yahtzee.py
msdt-1/: 1.py  1_1.py  5_laba_21_variant.py  LR01.py  LR1.py  LR1_tennis.py  LR1_tennis_test.py  LR1_unittest.py  Lab 1.py  Lab01.py  README.md  TG_Model.py  Train.py  UnformattedFile.py  app.py  auth.py  blackjack.py  books.py  chapters.py  classify_old.py  cli.py  code.py  const.py  constants.py  customer_data_access.py  document.py  game.py  get_groups.py  gratitude.py  hkobservatory_bot.py  index.py  index2play.py  initcode.py  lab.py  lab1.py  lab1Improve.py  lab1_1.py  lab1_2.py  lab1_file1.py  lab1_file2.py  (+45 more)
msdt-1/code_new/: labkg3.py  labra5finl.py
msdt-1/code_old/: labkg3.py
msdt-1/files_improved/: algoritms-task1.py  algoritms-task2.py  algoritms-task3.py  algoritms-task4.py
msdt-1/files_old/: algoritms-task1.py  algoritms-task2.py  algoritms-task4.py
msdt-1/one_more_python/: game.py
msdt-1/python/src/: customer_data_access.py  customer_sync.py  model_objects.py  prices.py
msdt-1/res/: stylesheet.txt
msdt-1/src/: Board.py  board.py  data_types.py  game.py  game_settings.py  letter_points_config.py  tile_types.py  word_existence_checker.py  word_points_counter.py  wordmaker.py
msdt-1/sudoku/: main.py
msdt-1/sudoku/CallFunc/: Call.py
msdt-1/sudoku/GUI/: GUI.py  (+2 more)
(+369 files in other folders)
